EvSidebarThumbnails: switch to using cairo_surface_t for images

To support high resolution thumbnails on hi-dpi displays, we need to
use cairo surfaces instead of using GdkPixbuf for images. In preparation
for high resolution thumbnails, switch over to cairo_surface_t. This
adds a GTK+ 3.10 dependency.

Add new:
ev_document_misc_render_loading_thumbnail_surface()
ev_document_misc_render_thumbnail_surface_with_frame()

To avoid converting surface => pixbuf => surface.

https://bugzilla.gnome.org/show_bug.cgi?id=723431